--- a/1401-1500.md
+++ b/1401-1500.md
@@ -58,3 +58,11 @@ for (int index = 1; index < n; index++) {
 记录每个字母的出现次数，如果出现某个后面的大于前面的则不合法，如果最后一个字符有`1`，则全部减`1`，`result`记录最开头字符的最大出现次数
 # 1420. Build Array Where You Can Find The Maximum Exactly K Comparisons
 记忆化递归，遍历数组，记录最大值
+# 1422. Maximum Score After Splitting a String
+遍历统计
+# 1423. Maximum Points You Can Obtain from Cards
+前缀和，`k`可以分为前后部分，也可以维护`len-k`的窗口
+# 1424. Diagonal Traverse II
+对角线`i+j`值一样，按`i+j`组合
+# 1425. Constrained Subsequence Sum
+`dp`的单调队列优化，队列记录窗口中`dp`的最大值下标
