--- a/1401-1500.md
+++ b/1401-1500.md
@@ -66,3 +66,29 @@ for (int index = 1; index < n; index++) {
 对角线`i+j`值一样，按`i+j`组合
 # 1425. Constrained Subsequence Sum
 `dp`的单调队列优化，队列记录窗口中`dp`的最大值下标
+# 1431. Kids With the Greatest Number of Candies
+求最大值后，对每个元素比较
+# 1432. Max Difference You Can Get From Changing an Integer
+大的用`9`替换，小的用`1`或者`0`替换，可以暴力的直接替换比较
+# 1433. Check If a String Can Break Another String
+从大到小依次比较，因此可以排序后比较
+
+考虑计数，一加一减累和
+``` java
+for (int i = 0; i < s1.length(); ++i) {
+    --cnt[s1[i] - 'a'];
+    ++cnt[s2[i] - 'a'];
+}
+
+int sum = 0;
+boolean big1 = true, big2 = true;
+for (int i = 25; i >= 0; --i) {
+    sum += cnt[i];
+    if (big1 && sum > 0) big1 = false;
+    if (big2 && sum < 0) big2 = false;
+    if (!big1 && !big2) return false;
+}
+return true;
+```
+# 1434. Number of Ways to Wear Different Hats to Each Other
+直接对每个人分配会超时，主要到帽子多人少，因此考虑对每个帽子给人分配，建立帽子跟人的关系，考虑每个帽子是否分给某个人，对人进行状态压缩
