--- a/1401-1500.md
+++ b/1401-1500.md
@@ -92,3 +92,36 @@ return true;
 ```
 # 1434. Number of Ways to Wear Different Hats to Each Other
 直接对每个人分配会超时，主要到帽子多人少，因此考虑对每个帽子给人分配，建立帽子跟人的关系，考虑每个帽子是否分给某个人，对人进行状态压缩
+# 1436. Destination City
+把起点和终点做成两个集合，终点集减去起点集，剩下的一个元素就是结果
+# 1437. Check If All 1's Are at Least Length K Places Away
+顺序遍历，每次遇到`1`的时候`check`，设置最开始的位置很小可以避免边界情况
+# 1438. Longest Continuous Subarray With Absolute Diff Less Than or Equal to Limit
+`treemap`维护窗口的最大值和最小值
+
+也可以用两个单调队列分别维护最大值和最小值
+``` java
+int start=0;
+for (int end=0; end<nums.length;end++){
+    while(!maxQ.isEmpty() && nums[maxQ.peekLast()]<nums[end]){
+        maxQ.pollLast();
+    }
+    maxQ.add(end);
+    
+    while(!minQ.isEmpty() && nums[minQ.peekLast()]>nums[end]){
+        minQ.pollLast();
+    }
+    minQ.add(end);
+    
+    while(!maxQ.isEmpty() && !minQ.isEmpty() && nums[maxQ.peek()]-nums[minQ.peek()]>limit){
+        if(maxQ.peek()<=start) maxQ.poll();
+        if(minQ.peek()<=start) minQ.poll();
+        start++;
+    }
+    ans = Math.max(ans,end-start+1);
+}
+```
+# 1439. Find the Kth Smallest Sum of a Matrix With Sorted Rows
+先保存第一行的数，然后把第二行的拿出来结合相加，排序选前`k`个，再重复
+
+考虑二分答案，找小于答案的数有多少个
