--- a/1401-1500.md
+++ b/1401-1500.md
@@ -125,3 +125,46 @@ for (int end=0; end<nums.length;end++){
 先保存第一行的数，然后把第二行的拿出来结合相加，排序选前`k`个，再重复
 
 考虑二分答案，找小于答案的数有多少个
+# 1441. Build an Array With Stack Operations
+先放到到`set`里，没出现过就是`push,pop`，否则只有`push`
+# 1442. Count Triplets That Can Form Two Arrays of Equal XOR
+两段异或相等等价于整段异或为`0`
+# 1443. Minimum Time to Collect All Apples in a Tree
+建树，后序遍历，考虑某个节点是否需要加到结果
+# 1444. Number of Ways of Cutting a Pizza
+记忆化递归，预处理某个点的右下角有多少个苹果，考虑每个横切竖切合法的切法
+# 1446. Consecutive Characters
+双指针，记录前一个字符和出现的位置
+# 1447. Simplified Fractions
+遍历看`gcd`是否为`1`，为`1`则最简
+# 1448. Count Good Nodes in Binary Tree
+记录路径上的最大值，后序遍历比较
+
+也可以前序遍历，每个节点只访问一次
+``` java
+if(node == null) return;
+if(node.val >= max){
+    res++;
+    max = node.val;
+}
+dfs(node.left , max);
+dfs(node.right , max);
+```  
+# 1449. Form Largest Integer With Digits That Add up to Target
+记忆化递归，考虑每个位置的选值，比较长度
+# 1450. Number of Students Doing Homework at a Given Time
+遍历比较
+# 1451. Rearrange Words in a Sentence
+分割后排序
+# 1452. People Whose List of Favorite Companies Is Not a Subset of Another List
+两重循环比较，使用`containsAll`
+# 1453. Maximum Number of Darts Inside of a Circular Dartboard
+以两个点构成的圆，再遍历看有多少个点在圆内
+# 1455. Check If a Word Occurs As a Prefix of Any Word in a Sentence
+分割后暴力判断
+# 1456. Maximum Number of Vowels in a Substring of Given Length
+滑动窗口
+# 1457. Pseudo-Palindromic Paths in a Binary Tree
+搜索到叶节点进行统计
+# 1458. Max Dot Product of Two Subsequences
+考虑选和不选
