--- a/1401-1500.md
+++ b/1401-1500.md
@@ -168,3 +168,30 @@ dfs(node.right , max);
 搜索到叶节点进行统计
 # 1458. Max Dot Product of Two Subsequences
 考虑选和不选
+# 1460. Make Two Arrays Equal by Reversing Sub-arrays
+判断数组是否完全一致
+# 1461. Check If a String Contains All Binary Codes of Size K
+把所有子串放到`set`里，判断`size`是否为`2`的`k`次方
+# 1462. Course Schedule IV
+反向建图，`dfs`搜索并记忆化
+
+可以`Floyd`求任意两点是否可达
+``` java
+boolean[][] map = new boolean[n][n];
+for (int[] preReq : prerequisites) {
+    map[preReq[0]][preReq[1]] = true;
+}
+
+for (int k = 0; k < n; k++) {
+    for (int i = 0; i < n; i++) {
+        for (int j = 0; j < n; j++) {
+            if (map[i][k] && map[k][j]) {
+                map[i][j] = true;
+            }
+        }
+    }
+}
+```
+# 1463. Cherry Pickup II
+记忆化递归，记录三维状态行数和两个机器人的位置
+ 
