--- a/1401-1500.md
+++ b/1401-1500.md
@@ -194,4 +194,12 @@ for (int k = 0; k < n; k++) {
 ```
 # 1463. Cherry Pickup II
 记忆化递归，记录三维状态行数和两个机器人的位置
- 
+# 1464. Maximum Product of Two Elements in an Array
+排序后使用最后两个最大元素
+# 1465. Maximum Area of a Piece of Cake After Horizontal and Vertical Cuts
+找间距最大的段
+# 1466. Reorder Routes to Make All Paths Lead to the City Zero
+邻接表建树，记录方向，遍历树看方向是否一致
+# 1467. Probability of a Two Boxes Having The Same Number of Distinct Balls
+使用`double`存方案数，可重复排列数`S!/(s1!*s2!*s3!...)`
+> 左右选了后，方案数为左右方案相乘，也是可重复排列数
