--- a/1401-1500.md
+++ b/1401-1500.md
@@ -203,3 +203,39 @@ for (int k = 0; k < n; k++) {
 # 1467. Probability of a Two Boxes Having The Same Number of Distinct Balls
 使用`double`存方案数，可重复排列数`S!/(s1!*s2!*s3!...)`
 > 左右选了后，方案数为左右方案相乘，也是可重复排列数
+# 1470. Shuffle the Array
+用个`index`指向下标
+# 1471. The k Strongest Values in an Array
+直接排序或者左右双指针
+# 1472. Design Browser History
+数组模拟
+# 1473. Paint House III
+记忆化递归，考虑每个房子粉刷的情况
+# 1475. Final Prices With a Special Discount in a Shop
+单调栈
+# 1476. Subrectangle Queries
+可以暴力更新所有区域，或者记录历史更新，每次与历史的更新比较
+# 1477. Find Two Non-overlapping Sub-arrays Each With Target Sum
+左右两边求前缀和，`hash`去`dp`到`i`的最小长度，然后对每个位置相加
+
+考虑直接`dp`，`dp`仍然保留到`i`的最小长度，求得一个区间和后再加上`dp[i-l]`的长度
+# 1478. Allocate Mailboxes
+记忆化递归，区间`dp`，转换成划分`k`个区间的最小值，每个区间求值可以找到中位数，然后每个值与中位数相减
+# 1480. Running Sum of 1d Array
+前缀和
+# 1481. Least Number of Unique Integers after K Removals
+计数排序，从小到大的减
+# 1482. Minimum Number of Days to Make m Bouquets
+二分答案，根据`mid`判断能有几个
+# 1483. Kth Ancestor of a Tree Node
+`LCA`倍增
+# 1486. XOR Operation in an Array
+遍历模拟
+# 1487. Making File Names Unique
+`map`记录某个文件名的最大出现次数
+# 1488. Avoid Flood in The City
+贪心的思路，`map`记录每个值的下标，遇到相同的就去找开始那个位置最近的`0`的位置，并使用后从`treeset`中移除
+
+另外一种思路是用优先队列，遇到`0`则使用后面已出现的距离当前最近一个
+# 1489. Find Critical and Pseudo-Critical Edges in Minimum Spanning Tree
+最小生成树，暴力每条边，考虑加上这条边和不加这条边的值
