--- a/1401-1500.md
+++ b/1401-1500.md
@@ -239,3 +239,35 @@ for (int k = 0; k < n; k++) {
 另外一种思路是用优先队列，遇到`0`则使用后面已出现的距离当前最近一个
 # 1489. Find Critical and Pseudo-Critical Edges in Minimum Spanning Tree
 最小生成树，暴力每条边，考虑加上这条边和不加这条边的值
+# 1491. Average Salary Excluding the Minimum and Maximum Salary
+取到最小最大值，统计
+# 1492. The kth Factor of n
+遍历，数到`k`返回
+# 1493. Longest Subarray of 1's After Deleting One Element
+滑动窗口，窗口内最多一个`0`
+
+或者左右求一遍以`i`结尾`1`的个数，然后遍历一遍删去求最大值
+
+考虑`dp`，`dp[i][0]`表示以`i`结尾且没有删除，`dp[i][1]`表示`i`结尾且删除
+``` java
+for (int i = 1; i < len; i++) {
+    if (nums[i] == 1) {
+        dp[i][0] = dp[i - 1][0] + 1;
+        dp[i][1] = dp[i - 1][1] + 1;
+    } else {
+        dp[i][0] = 0;
+        dp[i][1] = dp[i - 1][0];
+    }
+    result = Math.max(result, dp[i][1]);
+}
+```
+# 1494. Parallel Courses II
+状压`dp`，枚举子集
+# 1496. Path Crossing
+记录访问过的点
+# 1497. Check If Array Pairs Are Divisible by k
+记录每个余数的个数，看是否匹配
+# 1498. Number of Subsequences That Satisfy the Given Sum Condition
+子集与顺序无关，排序，考虑每个最小值，最远能到的位置，因此选当前最小值，后面的元素都可以选和不选，双指针逼近
+# 1499. Max Value of Equation
+单调队列，保留`y-x`的最大值
