--- a/1501-1600.md
+++ b/1501-1600.md
@@ -56,3 +56,5 @@ for (int i = 1; i <= row; ++i) {
     }
 }
 ```
+# 1505. Minimum Possible Integer After at Most K Adjacent Swaps On Digits
+贪心的取最小的放过来，利用树状数组记录移动位置，每次选取的时候考虑这个移动情况
