--- a/1501-1600.md
+++ b/1501-1600.md
@@ -58,3 +58,57 @@ for (int i = 1; i <= row; ++i) {
 ```
 # 1505. Minimum Possible Integer After at Most K Adjacent Swaps On Digits
 贪心的取最小的放过来，利用树状数组记录移动位置，每次选取的时候考虑这个移动情况
+# 1507. Reformat Date
+直接处理
+# 1508. Range Sum of Sorted Subarray Sums
+前缀和，排序后累加
+# 1509. Minimum Difference Between Largest and Smallest Value in Three Moves
+排序后，去掉前面和后面的再比较最小值
+# 1510. Stone Game IV
+记忆化递归，考虑选不同是否对方能输
+# 1512. Number of Good Pairs
+暴力比较
+
+考虑桶的思想
+``` java
+int result = 0;
+for (int num : nums) {
+    result += cnt[num];
+    cnt[num]++;
+}
+return result;
+```
+# 1513. Number of Substrings With Only 1s
+不断累加`1`的个数
+# 1514. Path with Maximum Probability
+可以看成最短路问题，注意到使用记忆化的`dfs`可能会错[参考](https://codeforces.com/blog/entry/16579?f0a28=1)
+# 1515. Best Position for a Service Centre
+三分套三分，二次曲线类可以三分，枚举两个左右`x`，考虑合适的`y`，看此时哪边更好
+
+可以考虑求导的方法不断逼近最优值
+
+可以模拟退火，朝四个方向移动
+``` java
+double eps = 1e-8;
+double ret = 1e18;
+double step = 100;
+double t = 0.98;
+while (step > eps) {
+  int flag = 1;
+  while (flag == 1) {
+    flag = 0;
+    for (int i = 0; i < 4; i++) {
+      double nx = x + dx[i][0] * step;
+      double ny = y + dx[i][1] * step;
+      double tmp = dist(nx, ny);
+      if (tmp < ret) {
+        ret = tmp;
+        x = nx;
+        y = ny;
+        flag = 1;
+      }
+    }
+  }
+  step *= t;
+}
+```
