--- a/1501-1600.md
+++ b/1501-1600.md
@@ -112,3 +112,11 @@ while (step > eps) {
   step *= t;
 }
 ```
+# 1518. Water Bottles
+模拟
+# 1519. Number of Nodes in the Sub-Tree With the Same Label
+建树，然后`dfs`记录子节点对父节点的贡献
+# 1520. Maximum Number of Non-Overlapping Substrings
+记录要选每个字符时的最左和最右区间，然后拓展区间，最后按结束时间排序贪心的选择
+# 1521. Find a Value of a Mysterious Function Closest to Target
+有递减的性质，滑动窗口，记录某个位置`0`的个数
