--- a/1501-1600.md
+++ b/1501-1600.md
@@ -120,3 +120,22 @@ while (step > eps) {
 记录要选每个字符时的最左和最右区间，然后拓展区间，最后按结束时间排序贪心的选择
 # 1521. Find a Value of a Mysterious Function Closest to Target
 有递减的性质，滑动窗口，记录某个位置`0`的个数
+# 1523. Count Odd Numbers in an Interval Range
+向上取整
+# 1524. Number of Sub-arrays With Odd Sum
+类似`A+B`的问题，记录之前出现的奇偶次数
+# 1525. Number of Good Ways to Split a String
+记录个数不同字符出现的个数，遍历当第一次出现时个数加`1`，当达到总数时右边个数减`1`
+# 1526. Minimum Number of Increments on Subarrays to Form a Target Array
+贪心，考虑前一个元素比后一个大，则后一个在加的时候前一个也一起加，差则是需要单独再加的
+# 1528. Shuffle String
+用`char`数组存
+# 1529. Bulb Switcher IV
+从左到右，记录翻转次数，对当前位只需考虑翻转次数的奇偶
+# 1530. Number of Good Leaf Nodes Pairs
+记录每个叶子节点的高度返回给上一层
+# 1531. String Compression II
+考虑当前是否删，记录前一个字符出现的次数，不相同的时候和到末尾的时候结算前一个字符
+> 注意到超过`100`后其实`count`增加不会使得长度增加，因此`count`只需保留到`10`
+
+>`memo`如果全局一下开到最大会超时，可能是内存开销比较大
