--- a/1501-1600.md
+++ b/1501-1600.md
@@ -139,3 +139,11 @@ while (step > eps) {
 > 注意到超过`100`后其实`count`增加不会使得长度增加，因此`count`只需保留到`10`
 
 >`memo`如果全局一下开到最大会超时，可能是内存开销比较大
+# 1534. Count Good Triplets
+暴力
+# 1535. Find the Winner of an Array Game
+利用双端队列模拟
+# 1536. Minimum Swaps to Arrange a Binary Grid
+统计末尾`0`的个数，贪心的将满足条件的交换过来，模拟整个过程
+# 1537. Get the Maximum Score
+归并的思路，双指针，选择每段中的最大值，每次小的移动直到相等的位置进行结算
