--- a/1501-1600.md
+++ b/1501-1600.md
@@ -147,3 +147,20 @@ while (step > eps) {
 统计末尾`0`的个数，贪心的将满足条件的交换过来，模拟整个过程
 # 1537. Get the Maximum Score
 归并的思路，双指针，选择每段中的最大值，每次小的移动直到相等的位置进行结算
+# 1539. Kth Missing Positive Number
+遍历，可以先记录出现的位置，也可以按升序比较
+# 1540. Can Convert String in K Moves
+记录每个位置差值的个数，看是否会超过`k`
+# 1541. Minimum Insertions to Balance a Parentheses String
+用栈模拟
+# 1542. Find Longest Awesome Substring
+位运算，记录每个位置的奇偶次数，`A+B`
+# 1544. Make The String Great
+利用栈模拟
+# 1545. Find Kth Bit in Nth Binary String
+分形递归
+# 1546. Maximum Number of Non-Overlapping Subarrays With Sum Equals Target
+`dp`，记录每个位置的最大个数，利用`A+B`看某个前缀和是否满足
+# 1547. Minimum Cost to Cut a Stick
+区间`dp`，加入两个端点，可以看成石子合并，考虑将这些段合成一个木棍，枚举最后合并的位置
+ 
