--- a/1501-1600.md
+++ b/1501-1600.md
@@ -163,4 +163,11 @@ while (step > eps) {
 `dp`，记录每个位置的最大个数，利用`A+B`看某个前缀和是否满足
 # 1547. Minimum Cost to Cut a Stick
 区间`dp`，加入两个端点，可以看成石子合并，考虑将这些段合成一个木棍，枚举最后合并的位置
- 
+# 1550. Three Consecutive Odds
+计数即可，或者依次判断是否包含`3`个连续
+# 1551. Minimum Operations to Make Array Equal
+等差数列，可以找规律
+# 1552. Magnetic Force Between Two Balls
+二分答案
+# 1553. Minimum Number of Days to Eat N Oranges
+记忆化搜索，考虑每次能除`2`和除`3`的情况
