--- a/1501-1600.md
+++ b/1501-1600.md
@@ -171,3 +171,34 @@ while (step > eps) {
 二分答案
 # 1553. Minimum Number of Days to Eat N Oranges
 记忆化搜索，考虑每次能除`2`和除`3`的情况
+# 1556. Thousand Separator
+从后往前插入
+# 1557. Minimum Number of Vertices to Reach All Nodes
+题目保证解存在且唯一，因此最小点集为图中所有入度为`0`的点
+# 1558. Minimum Numbers of Function Calls to Make Target Array
+尽量除`2`，每个`1`都需要加`1`才行，乘`2`考虑最大值的位数
+# 1559. Detect Cycles in 2D Grid
+记录父节点，`dfs`判断环
+# 1560. Most Visited Sector in  a Circular Track
+可以模拟，其实只与第一个点和最后一个点有关系
+# 1561. Maximum Number of Coins You Can Get
+每次拿第二大的
+# 1562. Find Latest Group of Size M
+用`treeset`逆序去找
+
+可以遍历一次合并区间
+``` java
+int res = -1, n = A.length;
+int[] length = new int[n + 2], count = new int[n + 1];
+for (int i = 0; i < n; ++i) {
+    int a = A[i], left = length[a - 1], right = length[a + 1];
+    length[a] = length[a - left] = length[a + right] = left + right + 1;
+    count[left]--;
+    count[right]--;
+    count[length[a]]++;
+    if (count[m] > 0)
+        res = i + 1;
+}
+```
+# 1563. Stone Game V
+记忆化递归
