--- a/1501-1600.md
+++ b/1501-1600.md
@@ -202,3 +202,7 @@ for (int i = 0; i < n; ++i) {
 ```
 # 1563. Stone Game V
 记忆化递归
+# 1566. Detect Pattern of Length M Repeated K or More Times
+暴力比较
+# 1567. Maximum Length of Subarray With Positive Product
+递推
