--- a/1501-1600.md
+++ b/1501-1600.md
@@ -206,3 +206,7 @@ for (int i = 0; i < n; ++i) {
 暴力比较
 # 1567. Maximum Length of Subarray With Positive Product
 递推
+# 1568. Minimum Number of Days to Disconnect Island
+答案最多为`2`，因为对于最左上角的`1`，去掉最多两个可以让其孤立，因此先判断`0`是否可行，再改一个`1`看是否可行
+# 1569. Number of Ways to Reorder Array to Get Same BST
+左右两边比较独立，组合数和左右两边的递归
