--- a/1501-1600.md
+++ b/1501-1600.md
@@ -210,3 +210,11 @@ for (int i = 0; i < n; ++i) {
 答案最多为`2`，因为对于最左上角的`1`，去掉最多两个可以让其孤立，因此先判断`0`是否可行，再改一个`1`看是否可行
 # 1569. Number of Ways to Reorder Array to Get Same BST
 左右两边比较独立，组合数和左右两边的递归
+# 1572. Matrix Diagonal Sum
+对角线相加
+# 1573. Number of Ways to Split a String
+找三分位间`0`的个数，相乘即是结果
+# 1574. Shortest Subarray to be Removed to Make Array Sorted
+只能删一个，肯定会删中间的，两边再用双指针
+# 1575. Count All Possible Routes
+记忆化递归
