--- a/1501-1600.md
+++ b/1501-1600.md
@@ -218,3 +218,17 @@ for (int i = 0; i < n; ++i) {
 只能删一个，肯定会删中间的，两边再用双指针
 # 1575. Count All Possible Routes
 记忆化递归
+# 1576. Replace All ?'s to Avoid Consecutive Repeating Characters
+直接模拟
+# 1577. Number of Ways Where Square of Number Is Equal to Product of Two Numbers
+直接模拟
+# 1578. Minimum Deletion Cost to Avoid Repeating Letters
+在相同的保留最大的，删去其他小的
+
+也可以`dp[i][j]`，表示前`i`个以`j`字符结尾最小删去的值
+``` java
+f[i][j] = f[i - 1][j] + cost[i];
+f[i][t] = min(f[i][t], f[i - 1][j]);
+```
+# 1579. Remove Max Number of Edges to Keep Graph Fully Traversable
+并查集，优先选`3`类型
