--- a/1501-1600.md
+++ b/1501-1600.md
@@ -232,3 +232,11 @@ f[i][t] = min(f[i][t], f[i - 1][j]);
 ```
 # 1579. Remove Max Number of Edges to Keep Graph Fully Traversable
 并查集，优先选`3`类型
+# 1582. Special Positions in a Binary Matrix
+记录行和列出现的次数
+# 1583. Count Unhappy Friends
+用二维数组记录`rank`，然后模拟
+# 1584. Min Cost to Connect All Points
+求两两之间的距离做最小生成树
+# 1585. Check If String Is Transformable With Substring Sort Operations
+记录`s`中的数字的位置，`t`从后往前的每个数字`num`，只要`(number,9]`的中的每个数在`s`中的最后位置比`num`在`s`中的位置小才行
