--- a/1501-1600.md
+++ b/1501-1600.md
@@ -240,3 +240,23 @@ f[i][t] = min(f[i][t], f[i - 1][j]);
 求两两之间的距离做最小生成树
 # 1585. Check If String Is Transformable With Substring Sort Operations
 记录`s`中的数字的位置，`t`从后往前的每个数字`num`，只要`(number,9]`的中的每个数在`s`中的最后位置比`num`在`s`中的位置小才行
+# 1588. Sum of All Odd Length Subarrays
+暴力计算
+
+另外一种`O(n)`的思路是考虑某个数会出现在奇数长度数组中出现多少次
+``` java
+for(int i = 0; i < n; ++i){
+    int left = i + 1, right = n-i;
+    int left_odd = (left) / 2;
+    int right_odd = (right)/2;
+    int left_even = (left+1)/2;
+    int right_even = (right+1)/2;
+    res += arr[i] * (left_even * right_even + left_odd * right_odd);
+}
+```
+# 1589. Maximum Sum Obtained of Any Permutation
+ 对区间两个端点差分，统计频率
+# 1590. Make Sum Divisible by P
+类似`A+B`，记录出现余数的位置
+# 1591. Strange Printer II
+倒着推，每次找到能删的矩形置为万能色，看是否能有新的可以重置
