--- a/1501-1600.md
+++ b/1501-1600.md
@@ -260,3 +260,17 @@ for(int i = 0; i < n; ++i){
 类似`A+B`，记录出现余数的位置
 # 1591. Strange Printer II
 倒着推，每次找到能删的矩形置为万能色，看是否能有新的可以重置
+# 1592. Rearrange Spaces Between Words
+统计空格个数模拟
+# 1593. Split a String Into the Max Number of Unique Substrings
+暴力搜索
+# 1594. Maximum Non Negative Product in a Matrix
+同时记录最大最小值
+# 1595. Minimum Cost to Connect Two Groups of Points
+状态压缩，当上一个状态选定后，可以在未选的里面枚举子集，也可以选一个上一个状态出现了的
+# 1598. Crawler Log Folder
+根据字符串加减结果
+# 1599. Maximum Profit of Operating a Centennial Wheel
+模拟
+# 1600. Throne Inheritance
+多叉树的先序遍历
