--- a/1601-1700.md
+++ b/1601-1700.md
@@ -2,4 +2,7 @@
 枚举所有可能，考虑某个`req`选或不选的情况
 # 1603. Design Parking System
 记录次数模拟
-# 
+# 1604. Alert Using Same Key-Card Three or More Times in a One Hour Period
+按时间排序，用一个小时的滑动窗口统计是否有满足的
+
+可以按人名为组把时间放入`list`，对时间排序后看是否存在`3`个一小时以内的
