--- a/1601-1700.md
+++ b/1601-1700.md
@@ -6,3 +6,34 @@
 按时间排序，用一个小时的滑动窗口统计是否有满足的
 
 可以按人名为组把时间放入`list`，对时间排序后看是否存在`3`个一小时以内的
+# 1605. Find Valid Matrix Given Row and Column Sums
+贪心，第一行的和肯定小于所有列的和，因此每个位置取最小的，减去后，变成`n-1 * m`的子问题
+# 1606. Find Servers That Handled Most Number of Requests
+优先队列维护结束时间，`treeset`维护可用服务器，每到一个时间，从优先队列中弹出满足的服务器
+# 1608. Special Array With X Elements Greater Than or Equal X
+排序后，找到第一个大于等于该值的位置
+# 1609. Even Odd Tree
+层序遍历，把每层放到另一个队列中
+
+可以考虑再出队循环`size`的时候判断
+``` java
+prev = level % 2 == 0 ? Integer.MIN_VALUE : Integer.MAX_VALUE;
+for (int i = 0; i < size; i++) {
+    TreeNode poll = q.poll();
+    if (level % 2 == 0) {
+        if (poll.val % 2 != 1) return false;
+        if (poll.val <= prev) return false;
+        prev = poll.val;
+    } else {
+        if (poll.val % 2 != 0) return false;
+        if (poll.val >= prev) return false;
+        prev = poll.val;
+    }
+    if (poll.left != null) q.offer(poll.left);
+    if (poll.right != null) q.offer(poll.right);
+}
+```
+# 1610. Maximum Number of Visible Points
+算角度然后双指针查找，因为可以旋转，考虑整个数组加`360`后接到后面
+# 1611. Minimum One Bit Operations to Make Integers Zero
+等价于用格雷码找自然数
