--- a/1601-1700.md
+++ b/1601-1700.md
@@ -37,3 +37,11 @@ for (int i = 0; i < size; i++) {
 算角度然后双指针查找，因为可以旋转，考虑整个数组加`360`后接到后面
 # 1611. Minimum One Bit Operations to Make Integers Zero
 等价于用格雷码找自然数
+# 1614. Maximum Nesting Depth of the Parentheses
+只考虑左右括号
+# 1615. Maximal Network Rank
+遍历每两个点考虑其连接数，两者若相连则减`1`
+# 1616. Split Two Strings to Make Palindrome
+双指针判断是否回文，当不能构成的时候考虑中间部分各自是否能构成
+# 1617. Count Subtrees With Max Distance Between Cities
+位运算遍历所有子集，考虑是否连通及其距离，距离可以提前`Floyd`预处理
