--- a/1601-1700.md
+++ b/1601-1700.md
@@ -45,3 +45,10 @@ for (int i = 0; i < size; i++) {
 双指针判断是否回文，当不能构成的时候考虑中间部分各自是否能构成
 # 1617. Count Subtrees With Max Distance Between Cities
 位运算遍历所有子集，考虑是否连通及其距离，距离可以提前`Floyd`预处理
+# 1619. Mean of Array After Removing Some Elements
+排序去掉前面和后面的数求平均值
+# 1620. Coordinate With Maximum Network Quality
+遍历整数的点，求每个点的信号强度
+# 1621. Number of Sets of K Non-Overlapping Line Segments
+`dp[i][j][2]`，表示`i`位置`j`个线段，`0`表示不选（第`j`条线段的右端点不是`i`），`1`表示选（第`j`条线段的右端点是`i`）
+ 
