--- a/1601-1700.md
+++ b/1601-1700.md
@@ -51,4 +51,10 @@ for (int i = 0; i < size; i++) {
 遍历整数的点，求每个点的信号强度
 # 1621. Number of Sets of K Non-Overlapping Line Segments
 `dp[i][j][2]`，表示`i`位置`j`个线段，`0`表示不选（第`j`条线段的右端点不是`i`），`1`表示选（第`j`条线段的右端点是`i`）
- 
+ # 1622. Fancy Sequence
+ 本质可以看成前缀的计算，记录某个位置已经乘了多少加了多少，记为`a`，`b`，经过一段时间变为`x`，`y`，则过程中的乘和加`i`，`j`为
+ ```
+a*i=x => i=x/a
+b*i+j=y => j=y-b*i
+```
+用`java`的大数可解，不过容易超时，因此考虑模运算下的逆元操作
