--- a/1601-1700.md
+++ b/1601-1700.md
@@ -58,3 +58,14 @@ a*i=x => i=x/a
 b*i+j=y => j=y-b*i
 ```
 用`java`的大数可解，不过容易超时，因此考虑模运算下的逆元操作
+# 1624. Largest Substring Between Two Equal Characters
+检查初始位置和末尾位置的距离
+# 1625. Lexicographically Smallest String After Applying Operations
+暴力求解，`b`为偶数只能改奇数位置，考虑`10`种改法和`n`种顺序，`b`为奇数则奇数位和偶数位都能改变
+
+或者每次对两种操作`dfs`，将中间结果放到`set`中
+# 1626. Best Team With No Conflicts
+按年龄排序，转化为求最大上升子序列和的问题
+# 1627. Graph Connectivity With Threshold
+枚举公因数，将其倍数相连为边，并查集构造连接关系
+ 
