--- a/1601-1700.md
+++ b/1601-1700.md
@@ -68,4 +68,13 @@ b*i+j=y => j=y-b*i
 按年龄排序，转化为求最大上升子序列和的问题
 # 1627. Graph Connectivity With Threshold
 枚举公因数，将其倍数相连为边，并查集构造连接关系
- 
+# 1629. Slowest Key
+遍历判断
+# 1630. Arithmetic Subarrays
+把每个区间排序后判断
+# 1631. Path With Minimum Effort
+路径的最大绝对值最小，可以考虑二分答案，拓展的时候小于等于`mid`就可以扩展
+
+可以并查集，将每个点相互相连，长度为绝对值，将其按长度排序后依次添加进并查集，直到首位相连
+
+可以用`Dijkstr`算法进行拓展
