--- a/1601-1700.md
+++ b/1601-1700.md
@@ -78,3 +78,5 @@ b*i+j=y => j=y-b*i
 可以并查集，将每个点相互相连，长度为绝对值，将其按长度排序后依次添加进并查集，直到首位相连
 
 可以用`Dijkstr`算法进行拓展
+# 1632. Rank Transform of a Matrix
+记录每行每列最大的秩，按从小到大进行更新，注意当元素相同的时候，对共用行或列的元素要进行组合，并查集对行列进行分组
