--- a/1601-1700.md
+++ b/1601-1700.md
@@ -80,3 +80,8 @@ b*i+j=y => j=y-b*i
 可以用`Dijkstr`算法进行拓展
 # 1632. Rank Transform of a Matrix
 记录每行每列最大的秩，按从小到大进行更新，注意当元素相同的时候，对共用行或列的元素要进行组合，并查集对行列进行分组
+# 1636. Sort Array by Increasing Frequency
+记录次数排序 
+# 1637. Widest Vertical Area Between Two Points Containing No Points
+按`x`排序，求最大的间距
+# 
