--- a/1601-1700.md
+++ b/1601-1700.md
@@ -84,4 +84,25 @@ b*i+j=y => j=y-b*i
 记录次数排序 
 # 1637. Widest Vertical Area Between Two Points Containing No Points
 按`x`排序，求最大的间距
-# 
+# 1638. Count Substrings That Differ by One Character
+暴力从`i`和`j`位置开始向后依次统计`diff`为`1`的个数
+# 1639. Number of Ways to Form a Target String Given a Dictionary
+对`words`来说，每个位置可以提供多个不同的字母，要来组成`target`，考虑每个位置选或不选
+`dp[i][j]`，表示`words`中每个单词前`i`个位置组成`target`第`j`个位置的个数
+``` java
+dp[i][j] = dp[i-1][j] + dp[i-1][j-1] * cnt[i][t.charAt(j)]
+```
+# 1640. Check Array Formation Through Concatenation
+记录开头元素的索引，暴力判断
+# 1641. Count Sorted Vowel Strings
+可以`dp[i][j]`，`i`位置以`j`结尾的个数
+
+考虑`n`个球，如果数量确定了，则对应唯一的一个解（小的排在前面），因此考虑`n`个求分成`m`堆，且可以为空，利用隔板法
+``` java
+C[n-1][m-1] // 不能为空
+C[n+m-1][m-1] // 可以为空（考虑先在每个位置扔一个球，多加m个球后即转变了都不为空）
+```
+# 1642. Furthest Building You Can Reach
+贪心，先用梯子，当梯子不够用了，考虑将最短的拿出来放砖块
+# 1643. Kth Smallest Instructions
+`h`和`v`的个数是确定的，因此可以从高位依次确定，考虑`k`需要大于多少才能填`v`
