--- a/1701-1800.md
+++ b/1701-1800.md
@@ -12,3 +12,11 @@
 根据每列`x`的值考虑与前或后的关系
 # 1707. Maximum XOR With an Element From Array
 离线按顺序处理，用`trie`树尽量朝反方向走
+# 1710. Maximum Units on a Truck
+排序取最大的几个
+# 1711. Count Good Meals
+记录`2`的幂数，`A+B`的方式更新
+# 1712. Ways to Split Array Into Three Subarrays
+对第一个切分位置考虑第二个切分位置可以的区间，可以二分区间，另外存在单调性可以指针移动
+# 1713. Minimum Operations to Make a Subsequence
+求最大的公共子序列，因为`tar`中元素不相等，可以转换为求最长上升子序列，`nlogn`的解法
