--- a/1701-1800.md
+++ b/1701-1800.md
@@ -20,3 +20,22 @@
 对第一个切分位置考虑第二个切分位置可以的区间，可以二分区间，另外存在单调性可以指针移动
 # 1713. Minimum Operations to Make a Subsequence
 求最大的公共子序列，因为`tar`中元素不相等，可以转换为求最长上升子序列，`nlogn`的解法
+# 1716. Calculate Money in Leetcode Bank
+直接模拟，或者看成二维的矩阵，考虑每个值与位置的关系
+# 1717. Maximum Score From Removing Substrings
+贪心的构造值大的，可以判断替换`a`和`b`使得`x`始终更大
+# 1718. Construct the Lexicographically Largest Valid Sequence
+`dfs`，对每个位置用最大的可选去填
+# 1719. Number Of Ways To Reconstruct A Tree
+根据点连接的数量，构造这棵树，看是否能唯一成功
+# 1720. Decode XORed Array
+模拟
+# 1721. Swapping Nodes in a Linked List
+快慢指针
+# 1722. Minimize Hamming Distance After Swap Operations
+并查集找到位置可以一块的，然后看这些位置的值有多少可以在`target`中找到
+# 1723. Find Minimum Time to Finish All Jobs
+`dfs`，将`n`个`jobs`最多分配给`k`个人，当前的任务要么分配给之前的，要么新开一个分配，记录分配过程中最大值
+
+状压`dp[i][j]`，表示子集`i`，`j`个人完成的最小值，或者二分工作量状压`dp[i]`，表示完成子集`i`所需要的人数
+
