--- a/1701-1800.md
+++ b/1701-1800.md
@@ -38,4 +38,11 @@
 `dfs`，将`n`个`jobs`最多分配给`k`个人，当前的任务要么分配给之前的，要么新开一个分配，记录分配过程中最大值
 
 状压`dp[i][j]`，表示子集`i`，`j`个人完成的最小值，或者二分工作量状压`dp[i]`，表示完成子集`i`所需要的人数
-
+# 1725. Number Of Rectangles That Can Form The Largest Square
+统计最大的最小边个数
+# 1726. Tuple with Same Product
+统计每组乘积出现的次数，因为数都不相同，因此出现次数大于`2`的可以选两组组成对
+# 1727. Largest Submatrix With Rearrangements
+对某一行，记录行的高度，排序找最大的矩形
+# 1728. Cat and Mouse II
+记忆化递归，根据`step`判断是该谁的轮次，注意`dfs`的语义，表示老鼠是否能胜利，所以在老鼠的轮次里，如果下一个`dfs`为`true`，表示老鼠可以赢，则当前`dfs`可以为`true`，在猫的轮次里，如果下一轮某个`dfs`为`false`，则猫可以胜利，当前`dfs`返回`false`
