--- a/1701-1800.md
+++ b/1701-1800.md
@@ -46,3 +46,19 @@
 对某一行，记录行的高度，排序找最大的矩形
 # 1728. Cat and Mouse II
 记忆化递归，根据`step`判断是该谁的轮次，注意`dfs`的语义，表示老鼠是否能胜利，所以在老鼠的轮次里，如果下一个`dfs`为`true`，表示老鼠可以赢，则当前`dfs`可以为`true`，在猫的轮次里，如果下一轮某个`dfs`为`false`，则猫可以胜利，当前`dfs`返回`false`
+# 1732. Find the Highest Altitude
+遍历求最大的
+# 1733. Minimum Number of People to Teach
+先处理出不需要再学语言就可以交流的人，然后遍历每种语言，考虑需要交流的人对中哪些需要学
+# 1734. Decode XORed Permutation
+将奇数项异或可以发现，与`1`到`n`异或的值仅差了一个`a0`，因此可以得出`a0`可以推出所有解
+# 1735. Count Ways to Make Array With Product
+分解质因子，求质因子和次数，对每个质因子的次数`m`，考虑放到`n`个盒子，盒子可空里的放法为`C(m+n-1,n-1)`
+# 1736. Latest Time by Replacing Hidden Digits
+可以直接根据不同情况求解，也可以逆序判断是否满足
+# 1737. Change Minimum Characters to Satisfy One of Three Conditions
+枚举所有字母，判断满足条件的值
+# 1738. Find Kth Largest XOR Coordinate Value
+类似二维前缀和
+# 1739. Building Boxes
+找规律
