当小球遇上盒子

--- a/1701-1800.md
+++ b/1701-1800.md
@@ -53,7 +53,7 @@
 # 1734. Decode XORed Permutation
 将奇数项异或可以发现，与`1`到`n`异或的值仅差了一个`a0`，因此可以得出`a0`可以推出所有解
 # 1735. Count Ways to Make Array With Product
-分解质因子，求质因子和次数，对每个质因子的次数`m`，考虑放到`n`个盒子，盒子可空里的放法为`C(m+n-1,n-1)`
+分解质因子，求质因子和次数，对每个质因子的次数`m`，考虑放到`n`个盒子，盒子可空里的放法为`C(m+n-1,n-1)`。盒子与小球的问题参考[当小球遇上盒子](https://www.luogu.com.cn/blog/chengni5673/dang-xiao-qiu-yu-shang-he-zi)
 # 1736. Latest Time by Replacing Hidden Digits
 可以直接根据不同情况求解，也可以逆序判断是否满足
 # 1737. Change Minimum Characters to Satisfy One of Three Conditions
