--- a/1701-1800.md
+++ b/1701-1800.md
@@ -62,3 +62,11 @@
 类似二维前缀和
 # 1739. Building Boxes
 找规律
+# 1742. Maximum Number of Balls in a Box
+遍历求每个数的和
+# 1743. Restore the Array From Adjacent Pairs
+出现一次的为端点，通过此点进行遍历，可以构建图`dfs`
+# 1744. Can You Eat Your Favorite Candy on Your Favorite Day?
+最小值和最大值是否可以满足，注意数据范围和边界
+# 1745. Palindrome Partitioning IV
+`dp`预处理每个回文串，然后`n^2`判断
