--- a/1701-1800.md
+++ b/1701-1800.md
@@ -70,3 +70,15 @@
 最小值和最大值是否可以满足，注意数据范围和边界
 # 1745. Palindrome Partitioning IV
 `dp`预处理每个回文串，然后`n^2`判断
+# 1748. Sum of Unique Elements
+模拟
+# 1749. Maximum Absolute Sum of Any Subarray
+预处理前缀和，遍历记录最大值和最小值，用当前前缀和与最大或最小比较更新结果
+# 1750. Minimum Length of String After Deleting Similar Ends
+双指针贪心的比较首尾
+# 1751. Maximum Number of Events That Can Be Attended II
+`01`背包，转移的时候二分位置，位置也可以预处理出来，可以加快
+# 1752. Check if Array Is Sorted and Rotated
+查找逆序的次数
+# 1753. Maximum Score From Removing Stones
+如果可以两个小的之和小于第三个，则最大为两者之和，如果`a+b>c`，则偶数可以拿完，或者奇数剩一个
