--- a/1701-1800.md
+++ b/1701-1800.md
@@ -82,3 +82,7 @@
 查找逆序的次数
 # 1753. Maximum Score From Removing Stones
 如果可以两个小的之和小于第三个，则最大为两者之和，如果`a+b>c`，则偶数可以拿完，或者奇数剩一个
+# 1754. Largest Merge Of Two Strings
+暴力比较两个字符串当前位置的大小
+# 1755. Closest Subsequence Sum
+拆分成一半一半，后一半子数组求和的时候在第一个子数组的`treeset`中找最近的
