--- a/1701-1800.md
+++ b/1701-1800.md
@@ -86,3 +86,11 @@
 暴力比较两个字符串当前位置的大小
 # 1755. Closest Subsequence Sum
 拆分成一半一半，后一半子数组求和的时候在第一个子数组的`treeset`中找最近的
+# 1758. Minimum Changes To Make Alternating Binary String
+两种情况比较大小
+# 1759. Count Number of Homogenous Substrings
+如果等于前一个字符，则当前可以接到上一个后面多一倍，因此`dp`记录，或者算每个相同字符串的个数，`n`个`a`，包含有`n`个`a`，`n-1`个`aa`，`n-2`个`aaa`，公式为等差数列求和
+# 1760. Minimum Limit of Balls in a Bag
+二分答案
+# 1761. Minimum Degree of a Connected Trio in a Graph
+记录边的关系，暴力枚举每个三元组
