--- a/1701-1800.md
+++ b/1701-1800.md
@@ -94,3 +94,21 @@
 二分答案
 # 1761. Minimum Degree of a Connected Trio in a Graph
 记录边的关系，暴力枚举每个三元组
+# 1763. Longest Nice Substring
+暴力比较，用位记录小写和大写出现的位置
+# 1764. Form Array by Concatenating Subarrays of Another Array
+依次比较
+# 1765. Map of Highest Peak
+多源最短路
+# 1766. Tree of Coprimes
+向下遍历记录最近出现的某个值的节点，也可以用`50`个栈记录走过的节点
+# 1768. Merge Strings Alternately
+直接模拟
+# 1769. Minimum Number of Operations to Move All Balls to Each Box
+范围小，直接两重循环暴力
+
+更优的解法是`dp`的思想，对某个点来说，记录前一个点的结果和前面出现的点的个数，对当前点则是把前一个点的结果加上前面点的个数（移动一步）的值，后面的同理可得
+# 1770. Maximum Score from Performing Multiplication Operations
+`m`范围比较小，可以`O(m^2)`，因此不适用位置，而是左右选择的个数去记忆化递归
+# 1771. Maximize Palindrome Length From Subsequences
+拼接后求最长的回文子序列，记忆化递归即可，注意都要选，因此多一维记录是否都有取到
