--- a/1701-1800.md
+++ b/1701-1800.md
@@ -112,3 +112,25 @@
 `m`范围比较小，可以`O(m^2)`，因此不适用位置，而是左右选择的个数去记忆化递归
 # 1771. Maximize Palindrome Length From Subsequences
 拼接后求最长的回文子序列，记忆化递归即可，注意都要选，因此多一维记录是否都有取到
+# 1773. Count Items Matching a Rule
+循环累加
+# 1774. Closest Dessert Cost
+`dfs`枚举所有情况，或者三进制状压，三进制可以每两位表示一位数字，每次移动两位，再与`3`相与
+# 1775. Equal Sum Arrays With Minimum Number of Operations
+考虑所有能取到的值，判断两个数组到当前值需要多少次操作
+
+可以记录每个可数变化值的次数，从最大的开始查找
+``` java
+int diff = sum2 - sum1;
+for (int i = 5; i >= 1 && diff > 0; i--) {
+    while (cnt[i] > 0 && diff > 0) {
+        res++;
+        cnt[i]--;
+        diff -= i;
+    }
+}
+```
+# 1776. Car Fleet II
+左边对右边的车辆没有影响，考虑从后往前维护单调栈，当前追不上就弹栈继续比较，否则`break`
+
+比较好想的是维护一个优先队列，对时间最小的出队，然后将其前一个和后一个重新计算值放入
