--- a/1701-1800.md
+++ b/1701-1800.md
@@ -134,3 +134,20 @@ for (int i = 5; i >= 1 && diff > 0; i--) {
 左边对右边的车辆没有影响，考虑从后往前维护单调栈，当前追不上就弹栈继续比较，否则`break`
 
 比较好想的是维护一个优先队列，对时间最小的出队，然后将其前一个和后一个重新计算值放入
+# 1779. Find Nearest Point That Has the Same X or Y Coordinate
+遍历找满足条件的最小
+# 1780. Check if Number is a Sum of Powers of Three
+转换成`3`进制后只有`0`和`1`
+# 1781. Sum of Beauty of All Substrings
+暴力求解
+# 1782. Count Pairs Of Nodes
+注意分析数据范围，统计度数，在不计重边的情况下双指针求个数，然后再考虑某条重边是否需要减去，减去的条件是之前大于`limit`，现在小于等于
+# 1784. Check if Binary String Has at Most One Segment of Ones
+判断`1`是否有被`0`隔开
+# 1785. Minimum Elements to Add to Form a Given Sum
+统计差距，向上取整
+# 1786. Number of Restricted Paths From First to Last Node
+先`dij`求每个点的距离，然后看记忆化递归求路线，有`dist`递减，因此不会出现逆向遍历的情况，因此也可以对`dist`排序，从前往后递推，类似拓扑排序
+# 1787. Make the XOR of All Segments Equal to Zero
+按k分组，易得每组（竖向）的值应该一样，对第`i`组，在前`i-1`组确定某个数后，`i`可以为任意值使得异或为`0`，因此`i`应该选前面次数最小的异或值转移，此为上限，再对当前组的每个数具体算应该累加的次数
+> 选最小的转移先不考虑后一个值为多少求上限，相当于可以一次求出不在当前组的数的转移情况，再对在当前组的数具体求解，否在不判断`temp[j] != 0`会额外多很多计算
