--- a/1701-1800.md
+++ b/1701-1800.md
@@ -151,3 +151,15 @@ for (int i = 5; i >= 1 && diff > 0; i--) {
 # 1787. Make the XOR of All Segments Equal to Zero
 按k分组，易得每组（竖向）的值应该一样，对第`i`组，在前`i-1`组确定某个数后，`i`可以为任意值使得异或为`0`，因此`i`应该选前面次数最小的异或值转移，此为上限，再对当前组的每个数具体算应该累加的次数
 > 选最小的转移先不考虑后一个值为多少求上限，相当于可以一次求出不在当前组的数的转移情况，再对在当前组的数具体求解，否在不判断`temp[j] != 0`会额外多很多计算
+# 1790. Check if One String Swap Can Make Strings Equal
+模拟判断
+# 1791. Find Center of Star Graph
+统计
+# 1792. Maximum Average Pass Ratio
+优先队列，每次选变化可以最大的
+# 1793. Maximum Score of a Good Subarray
+枚举中心高度，从`k`位置开始双指针向两边扩展（不退回），或者记录最小值，每次二分或者倍增找最远位置
+
+贪心的方法可以是从中心向两边，大于当前就可以扩展，小于时选较大的进行扩展
+
+另外可以单调栈记录每个位置可以扩展到的位置，遍历考虑边界是否在`k`的两边
