--- a/1701-1800.md
+++ b/1701-1800.md
@@ -160,6 +160,6 @@ for (int i = 5; i >= 1 && diff > 0; i--) {
 # 1793. Maximum Score of a Good Subarray
 枚举中心高度，从`k`位置开始双指针向两边扩展（不退回），或者记录最小值，每次二分或者倍增找最远位置
 
-贪心的方法可以是从中心向两边，大于当前就可以扩展，小于时选较大的进行扩展
+贪心的方法可以是从中心向两边，大于当前就可以扩展，小于时停止，选相对较大的进行扩展
 
-另外可以单调栈记录每个位置可以扩展到的位置，遍历考虑边界是否在`k`的两边
+另外可以单调栈记录每个位置可以扩展到的位置，遍历考虑边界是否在`k`的两边，更新答案
