--- a/1701-1800.md
+++ b/1701-1800.md
@@ -163,3 +163,13 @@ for (int i = 5; i >= 1 && diff > 0; i--) {
 贪心的方法可以是从中心向两边，大于当前就可以扩展，小于时停止，选相对较大的进行扩展
 
 另外可以单调栈记录每个位置可以扩展到的位置，遍历考虑边界是否在`k`的两边，更新答案
+# 1796. Second Largest Digit in a String
+扫描一遍求解
+# 1797. Design Authentication Manager
+`map`暴力求解
+# 1798. Maximum Number of Consecutive Values You Can Make
+贪心，排序后，考虑前面的数和跟后面数的关系
+# 1799. Maximize Score After N Operations
+状压`dp`，考虑选了某几个后，剩下状态跟之前选的其实无关（无后效性），某个状态由上一次选某两个`1`的位置转移
+# 1800. Maximum Ascending Subarray Sum
+遍历记录
