--- a/1801-1900.md
+++ b/1801-1900.md
@@ -4,3 +4,4 @@
 答案成一个三角形状，可以二分，也可以从`index`处向两边扩展，每次多加`1`
 # 1803. Count Pairs With XOR in a Range
 在字典树中查询小于某个数的个数，字典树记录每个节点包含的子节点，当遍历到某个节点，考虑左或右是否可以直接放到答案中
+# 1812. Determine Color of a Chessboard Square
