--- a/1801-1900.md
+++ b/1801-1900.md
@@ -4,4 +4,28 @@
 答案成一个三角形状，可以二分，也可以从`index`处向两边扩展，每次多加`1`
 # 1803. Count Pairs With XOR in a Range
 在字典树中查询小于某个数的个数，字典树记录每个节点包含的子节点，当遍历到某个节点，考虑左或右是否可以直接放到答案中
+# 1805. Number of Different Integers in a String
+分割之后判断
+# 1806. Minimum Number of Operations to Reinitialize a Permutation
+考虑`1`的位置经过变换再回到初始位置
+# 1807. Evaluate the Bracket Pairs of a String
+找括号替换
+# 1808. Maximize Number of Nice Divisors
+尽量按`3`去切分，如果余数为`1`则把最后一个`3`跟`1`变成`4`
 # 1812. Determine Color of a Chessboard Square
+横纵坐标之和对`2`取余数
+# 1813. Sentence Similarity III
+类似双端队列，从前和后分别判断
+# 1814. Count Nice Pairs in an Array
+变换一下公式，类似`A+B`
+# 1815. Maximum Number of Groups Getting Fresh Donuts
+考虑如果前面几个确定了，则后续状态跟前面无关，存在`dp`的可能，记忆化递归，考虑每个可选`cnt`的选择情况，对`mod`和`cnt`进行压缩，`cnt`平均最大值为`4`,`8`个数，时间可过
+# 1816. Truncate Sentence
+遍历空格位置
+# 1817. Finding the Users Active Minutes
+`map`和`set`统计`size`
+# 1818. Minimum Absolute Sum Difference
+遍历每个元素找最接近`nums2`中元素的数
+# 1819. Number of Different Subsequences GCDs
+考虑每个数是否能被得到，即其倍数的公约数为当前值即可（越多的倍数越有可能得到）
+
