--- a/1801-1900.md
+++ b/1801-1900.md
@@ -28,4 +28,13 @@
 遍历每个元素找最接近`nums2`中元素的数
 # 1819. Number of Different Subsequences GCDs
 考虑每个数是否能被得到，即其倍数的公约数为当前值即可（越多的倍数越有可能得到）
-
+# 1822. Sign of the Product of an Array
+记录负数出现的次数奇偶
+# 1823. Find the Winner of the Circular Game
+约瑟夫环，数据量小可以双端队列模拟，大可以公式递推
+```
+f(n,k) = (f(n-1, k) + k) % n //考虑去掉第一个数k-1后，0到k的映射
+````
+# 1824. Minimum Sideway Jumps
+可以`01bfs`，或者分层`dp`解决循环依赖的问题，或者`Dijkstra`
+# 
