--- a/1801-1900.md
+++ b/1801-1900.md
@@ -37,4 +37,7 @@ f(n,k) = (f(n-1, k) + k) % n //考虑去掉第一个数k-1后，0到k的映射
 ````
 # 1824. Minimum Sideway Jumps
 可以`01bfs`，或者分层`dp`解决循环依赖的问题，或者`Dijkstra`
-# 
+# 1825. Finding MK Average
+类似中位数的维护，三个优先队列倒数，因为中间有可能要取大或小，因此用两个去维护
+
+可以考虑树状数组，维护一个`cnt`和`sum`，根据`cnt`二分前`k`个数的位置，根据`sum`求得`sum`的值
