--- a/1801-1900.md
+++ b/1801-1900.md
@@ -45,3 +45,5 @@ f(n,k) = (f(n-1, k) + k) % n //考虑去掉第一个数k-1后，0到k的映射
 最多比前面的数大`1`
 # 1828. Queries on Number of Points Inside a Circle
 判断距离是否跟半径的大小
+# 1829. Maximum XOR for Each Query
+异或运算的逆运算是其本身
