--- a/1801-1900.md
+++ b/1801-1900.md
@@ -47,3 +47,15 @@ f(n,k) = (f(n-1, k) + k) % n //考虑去掉第一个数k-1后，0到k的映射
 判断距离是否跟半径的大小
 # 1829. Maximum XOR for Each Query
 异或运算的逆运算是其本身
+# 1830. Minimum Number of Operations to Make String Sorted
+字典序倒序，数位`dp`组合数
+# 1832. Check if the Sentence Is Pangram
+位运算判断
+# 1833. Maximum Ice Cream Bars
+排序贪心
+# 1834. Single-Threaded CPU
+排序加优先队列，注意某一次队列取空后，让下一个时间入队列
+# 1835. Find XOR Sum of All Pairs Bitwise AND
+有：`(a&b)^(a&c) = a&(b^c)`，考虑`a`为`0`，左边为`0`，右边为`0`，考虑`a`为`1`，左边为`b^c`，右边是`b^c`
+
+把异或看成加法，与看成乘法，满足结合律
