--- a/1801-1900.md
+++ b/1801-1900.md
@@ -59,3 +59,13 @@ f(n,k) = (f(n-1, k) + k) % n //考虑去掉第一个数k-1后，0到k的映射
 有：`(a&b)^(a&c) = a&(b^c)`，考虑`a`为`0`，左边为`0`，右边为`0`，考虑`a`为`1`，左边为`b^c`，右边是`b^c`
 
 把异或看成加法，与看成乘法，满足结合律
+# 1837. Sum of Digits in Base K
+转换的时候维护和
+# 1838. Frequency of the Most Frequent Element
+排序后遍历每个元素，考虑最左的位置，可以二分，也可以双指针（左指针只会往后移）
+# 1839. Longest Substring Of All Vowels in Order
+只有元音字符，考虑增长`5`次的长度
+# 1840. Maximum Building Height
+某个位置的限制由左边所有点和右边所有点加自身而来，左边的点看成`y=x+b`的直线，记录最小的截距`minB`，此点的最高位置即为`x+minB`，同理可以对右边进行操作
+
+最大值的位置可能在这些点上，或者在左右相交直线的点上
