--- a/1801-1900.md
+++ b/1801-1900.md
@@ -69,3 +69,11 @@ f(n,k) = (f(n-1, k) + k) % n //考虑去掉第一个数k-1后，0到k的映射
 某个位置的限制由左边所有点和右边所有点加自身而来，左边的点看成`y=x+b`的直线，记录最小的截距`minB`，此点的最高位置即为`x+minB`，同理可以对右边进行操作
 
 最大值的位置可能在这些点上，或者在左右相交直线的点上
+# 1844. Replace All Digits with Characters
+模拟即可
+# 1845. Seat Reservation Manager
+优先队列或者堆维护
+# 1846. Maximum Element After Decreasing and Rearranging
+排序后贪心
+# 1847. Closest Room
+排序后离线
