--- a/1801-1900.md
+++ b/1801-1900.md
@@ -77,3 +77,13 @@ f(n,k) = (f(n-1, k) + k) % n //考虑去掉第一个数k-1后，0到k的映射
 排序后贪心
 # 1847. Closest Room
 排序后离线
+# 1848. Minimum Distance to the Target Element
+遍历
+# 1849. Splitting a String Into Descending Consecutive Values
+`dfs`
+# 1850. Minimum Adjacent Swaps to Reach the Kth Smallest Number
+先求排列，再求逆序对，类似冒泡排序
+# 1851. Minimum Interval to Include Each Query
+离线查询，先将所有`start`小于查询的放入优先队列（按长度排序），比较某个顶部元素是否满足。
+
+注意优先队列放的不一定是所有满足当前查询的元素，在按长度排序后，弹出的过程不影响计算
