--- a/1801-1900.md
+++ b/1801-1900.md
@@ -87,3 +87,11 @@ f(n,k) = (f(n-1, k) + k) % n //考虑去掉第一个数k-1后，0到k的映射
 离线查询，先将所有`start`小于查询的放入优先队列（按长度排序），比较某个顶部元素是否满足。
 
 注意优先队列放的不一定是所有满足当前查询的元素，在按长度排序后，弹出的过程不影响计算
+# 1854. Maximum Population Year
+遍历每个年份的情况，或者差分数组对一段进行记录
+# 1855. Maximum Distance Between a Pair of Values
+双指针，或者二分位置
+# 1856. Maximum Subarray Min-Product
+类似求最大矩形面积，单调栈`+`前缀和
+# 1857. Largest Color Value in a Directed Graph
+可以按照拓扑排序`dp`，且可以按拓扑遍历个数判断是否有环
