--- a/1801-1900.md
+++ b/1801-1900.md
@@ -95,3 +95,14 @@ f(n,k) = (f(n-1, k) + k) % n //考虑去掉第一个数k-1后，0到k的映射
 类似求最大矩形面积，单调栈`+`前缀和
 # 1857. Largest Color Value in a Directed Graph
 可以按照拓扑排序`dp`，且可以按拓扑遍历个数判断是否有环
+
+另外还是拓扑排序，按照颜色去`dp`，可以节省空间
+# 1859. Sorting the Sentence
+按末尾数值排序
+# 1860. Incremental Memory Leak
+直接模拟，注意计算次数，对`t`时刻求和应该小于`m1+m2`，`t`求和为`t^2`量级，因此复杂度在`sqrt(m1+m2)`
+
+另外可以考虑等差数列求和`O(1)`求出值
+# 1861. Rotating the Box
+可以先往右边放，记录障碍的位置
+# 
