--- a/1801-1900.md
+++ b/1801-1900.md
@@ -105,4 +105,26 @@ f(n,k) = (f(n-1, k) + k) % n //考虑去掉第一个数k-1后，0到k的映射
 另外可以考虑等差数列求和`O(1)`求出值
 # 1861. Rotating the Box
 可以先往右边放，记录障碍的位置
-# 
+# 1862. Sum of Floored Pairs
+对每一个数，考虑枚举其倍数的区间，该区间的个数用前缀和来维护
+# 1863. Sum of All Subset XOR Totals
+枚举子集
+
+`O(n)`的做法是对每一位，考虑有多少个可以为`1`，则结果为`count*(1<<i)`，`count`的值可由组合数求出为`2^(n-1)`
+``` java
+for (int num : nums) {
+    res |= num;
+}
+return res << (nums.length - 1);
+```
+# 1864. Minimum Number of Swaps to Make the Binary String Alternating
+分类比较，每次交换可以消去两个不同的位置
+# 1865. Finding Pairs With a Certain Sum
+`hash`表，每次对小的数组进行遍历求解
+# 1866. Number of Ways to Rearrange Sticks With K Sticks Visible
+第一类斯特林数，`n`的排列划分成`k`个非空圆排列的方案数
+
+可以考虑`2`到`i`放好了，现在放第一个的，能看到`j`个情况
+``` java
+dp[i][j] = dp[i - 1][j - 1] + (i - 1) * dp[i - 1][j];
+```
