--- a/1801-1900.md
+++ b/1801-1900.md
@@ -128,3 +128,8 @@ return res << (nums.length - 1);
 ``` java
 dp[i][j] = dp[i - 1][j - 1] + (i - 1) * dp[i - 1][j];
 ```
+# 1869. Longer Contiguous Segments of Ones than Zeros
+遍历记录`1`和`0`的个数，记录最大值
+# 1870. Minimum Speed to Arrive on Time
+二分答案
+# 
