--- a/1801-1900.md
+++ b/1801-1900.md
@@ -132,4 +132,18 @@ dp[i][j] = dp[i - 1][j - 1] + (i - 1) * dp[i - 1][j];
 遍历记录`1`和`0`的个数，记录最大值
 # 1870. Minimum Speed to Arrive on Time
 二分答案
-# 
+# 1871. Jump Game VII
+跳区间，`bfs`框架记录最左边的位置避免重复计算
+
+区间问题，也可以考虑差分优化
+``` java
+int sum = 0;
+for(int i = 0; i < n; i ++){
+    sum += d[i];
+    if(i == 0 || sum > 0 && s.charAt(i) == '0'){
+        d[i + minv]++;
+        d[i + maxv + 1]--;
+    }
+}
+return sum > 0;
+```
