--- a/1801-1900.md
+++ b/1801-1900.md
@@ -147,3 +147,5 @@ for(int i = 0; i < n; i ++){
 }
 return sum > 0;
 ```
+# 1872. Stone Game VIII
+`helper(2)`为从`2`到`n`的`sum[i]-helper(i+1)`的最大值，遍历为`O(n)`的复杂度，而`helper(3)`包含了`helper(2)`的后半部分，因此可以优化
