--- a/1801-1900.md
+++ b/1801-1900.md
@@ -149,3 +149,19 @@ return sum > 0;
 ```
 # 1872. Stone Game VIII
 `helper(2)`为从`2`到`n`的`sum[i]-helper(i+1)`的最大值，遍历为`O(n)`的复杂度，而`helper(3)`包含了`helper(2)`的后半部分，因此可以优化
+# 1876. Substrings of Size Three with Distinct Characters
+按窗口遍历
+# 1877. Minimize Maximum Pair Sum in Array
+贪心，排序后，前后两两匹配。此法可以求最大和最小，也可以求最小和最大
+# 1878. Get Biggest Three Rhombus Sums in a Grid
+歇着的前缀和，枚举菱形中点和宽度
+# 1879. Minimum XOR Sum of Two Arrays
+状压`dp`
+# 1880. Check if Word Equals Summation of Two Words
+模拟
+# 1881. Maximum Value after Insertion
+贪心根据正负插入
+# 1882. Process Tasks Using Servers
+两个优秀队列来回倒
+# 1883. Minimum Skips to Arrive at Meeting On Time
+`dp[i][j]`表示前`i`个跳过`j`时的路程（避免精度），精度问题操作`double`的`dp`时，可以减去一个`eps`后向上取
