--- a/1801-1900.md
+++ b/1801-1900.md
@@ -165,3 +165,11 @@ return sum > 0;
 两个优秀队列来回倒
 # 1883. Minimum Skips to Arrive at Meeting On Time
 `dp[i][j]`表示前`i`个跳过`j`时的路程（避免精度），精度问题操作`double`的`dp`时，可以减去一个`eps`后向上取
+# 1886. Determine Whether Matrix Can Be Obtained By Rotation
+旋转后比较
+# 1887. Reduction Operations to Make the Array Elements Equal
+对每个数操作次数为小于它的不同个数
+# 1888. Minimum Number of Flips to Make the Binary String Alternating
+双倍`s`，滑动窗口
+# 1889. Minimum Space Wasted From Packaging
+遍历箱子，二分可以使用的位置，前缀和求出当前的空间，也可以不用前缀和（可能的解总会减去所有包裹的和）
