--- a/1801-1900.md
+++ b/1801-1900.md
@@ -154,7 +154,7 @@ return sum > 0;
 # 1877. Minimize Maximum Pair Sum in Array
 贪心，排序后，前后两两匹配。此法可以求最大和最小，也可以求最小和最大
 # 1878. Get Biggest Three Rhombus Sums in a Grid
-歇着的前缀和，枚举菱形中点和宽度
+斜着的前缀和，枚举菱形中点和宽度
 # 1879. Minimum XOR Sum of Two Arrays
 状压`dp`
 # 1880. Check if Word Equals Summation of Two Words
