--- a/1801-1900.md
+++ b/1801-1900.md
@@ -173,3 +173,19 @@ return sum > 0;
 双倍`s`，滑动窗口
 # 1889. Minimum Space Wasted From Packaging
 遍历箱子，二分可以使用的位置，前缀和求出当前的空间，也可以不用前缀和（可能的解总会减去所有包裹的和）
+# 1893. Check if All the Integers in a Range Are Covered
+暴力遍历，如果数据量大可以考虑差分数组
+# 1894. Find the Student that Will Replace the Chalk
+求和取余
+# 1895. Largest Magic Square  
+前缀和暴力枚举
+# 1896. Minimum Cost to Change the Final Value of Expression
+类似表达式求值，可以用栈或者递归处理，返回子表达式为`0`或`1`的次数（递归的时候注意先递归左边再与最右求值）
+# 1897. Redistribute Characters to Make All Strings Equal
+考虑每个单词出现次数是否能被长度整除
+# 1898. Maximum Number of Removable Characters
+二分答案
+# 1899. Merge Triplets to Form Target Triplet
+贪心，每次记录可能在结果中的元素，记录这些元素的最大值
+# 1900. The Earliest and Latest Rounds Where Players Compete
+利用对称性简化讨论次数
