--- a/1801-1900.md
+++ b/1801-1900.md
@@ -165,6 +165,12 @@ return sum > 0;
 两个优秀队列来回倒
 # 1883. Minimum Skips to Arrive at Meeting On Time
 `dp[i][j]`表示前`i`个跳过`j`时的路程（避免精度），精度问题操作`double`的`dp`时，可以减去一个`eps`后向上取
+# 1884. Egg Drop With 2 Eggs and N Floors
+记忆化递归考虑某层掉落的情况
+
+或者数学方法，`x+...+3+2+1 >= n`的最小`x`
+> 第一步如果在`x`，碎了第二步将遍历`1`到`x-1`，总共`x`步，没碎如果上去太多可能超过这`x`步，因此可以到上升`x-1`，碎了仍然在`x`步
+
 # 1886. Determine Whether Matrix Can Be Obtained By Rotation
 旋转后比较
 # 1887. Reduction Operations to Make the Array Elements Equal
